--- a/pedido.html
+++ b/pedido.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Novo Pedido — MoskoGás v2.10.1</title>
+<title>Novo Pedido — MoskoGás v2.10.2</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -47,9 +47,9 @@
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.10.1 — pedido</div>
+<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.10.2 — pedido</div>
 <div class="container">
-  <h1>➕ Novo Pedido <span id="bling-indicator" title="Verificando Bling..." style="font-size:11px;padding:2px 8px;border-radius:10px;background:#94a3b8;color:#fff;cursor:pointer;vertical-align:middle" onclick="checkBlingStatus(true)">⏳ Bling</span> <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.10.1</span></h1>
+  <h1>➕ Novo Pedido <span id="bling-indicator" title="Verificando Bling..." style="font-size:11px;padding:2px 8px;border-radius:10px;background:#94a3b8;color:#fff;cursor:pointer;vertical-align:middle" onclick="checkBlingStatus(true)">⏳ Bling</span> <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.10.2</span></h1>
 
   <!-- BUSCA CLIENTE -->
   <div class="card">
@@ -457,7 +457,7 @@ function repeatLastOrder() {
   }
   renderItems();
   renderTotal();
-  showToast('🔄 Itens do pedido anterior adicionados!', 'success');
+  toast('🔄 Itens do pedido anterior adicionados!', 'success');
   document.getElementById('last-order-card').style.display = 'none';
 }
 
@@ -1361,6 +1361,7 @@ async function saveCadastro() {
   btn.disabled = true;
   btn.textContent = '⏳ Cadastrando...';
   status.textContent = '';
+  showLoading('Cadastrando no Bling...');
 
   try {
     let payload = {};
@@ -1434,6 +1435,7 @@ async function saveCadastro() {
     status.textContent = '❌ ' + e.message;
     toast('❌ ' + e.message, 'error');
   } finally {
+    hideLoading();
     btn.disabled = false;
     btn.textContent = '✅ Cadastrar no Bling';
   }
